WIP: Adding new enpoints and updating data model
