# app/controllers/report.controller.go
@@ -1,14 +1,18 @@
 package controllers
 
 import (
+	"errors"
+	"strconv"
+
 	"github.com/devmeireles/go-vue-image-evaluate/app/models"
 	"github.com/devmeireles/go-vue-image-evaluate/app/services"
 	"github.com/devmeireles/go-vue-image-evaluate/app/utils"
 	"github.com/gofiber/fiber/v2"
+	"gorm.io/gorm"
 )
 
 // CreateReport godoc
-// @Summary Endpoint to saves avatar reports
+// @Summary Endpoint to save avatar reports
 // @Description Saves a request for avatar evaluate
 // @Tags report
 // @Accept  json
@@ -36,4 +40,57 @@ func CreateReport(c *fiber.Ctx) error {
 
 	res := utils.ResSuccess(report)
 	return c.Status(fiber.StatusCreated).JSON(res)
+}
+
+// GetReport godoc
+// @Summary Get details for a given report id
+// @Description Get details of report corresponding to the input id
+// @Tags report
+// @Accept  json
+// @Produce  json
+// @Param id path int true "Report ID"
+// @Success 200 {object} models.Report
+// @Router /report/{id} [get]
+func GetReport(c *fiber.Ctx) error {
+	id, err := strconv.Atoi(c.Params("id"))
+
+	if err != nil {
+		res := utils.ResError(err)
+		return c.Status(fiber.ErrBadRequest.Code).JSON(res)
+	}
+
+	report, err := services.GetReportByID(id)
+
+	if err != nil {
+		res := utils.ResError(err)
+
+		if errors.Is(err, gorm.ErrRecordNotFound) {
+			return c.Status(fiber.StatusNotFound).JSON(res)
+		}
+
+		return c.Status(fiber.StatusInternalServerError).JSON(res)
+	}
+
+	res := utils.ResSuccess(report)
+	return c.Status(fiber.StatusOK).JSON(res)
+}
+
+// ListReports godoc
+// @Summary Get a list of reports id
+// @Description List all reports
+// @Tags report
+// @Accept  json
+// @Produce  json
+// @Success 200 {array} models.Report
+// @Router /report [get]
+func ListReports(c *fiber.Ctx) error {
+	reports, err := services.GetReports()
+
+	if err != nil {
+		res := utils.ResError(err)
+		return c.Status(fiber.StatusInternalServerError).JSON(res)
+	}
+
+	res := utils.ResSuccess(reports)
+	return c.Status(fiber.StatusOK).JSON(res)
 }
