# app/docs/swagger.json
@@ -13,6 +13,30 @@
     "host": "localhost:3000",
     "paths": {
         "/report": {
+            "get": {
+                "description": "List all reports",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "report"
+                ],
+                "summary": "Get a list of reports id",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/models.Report"
+                            }
+                        }
+                    }
+                }
+            },
             "post": {
                 "description": "Saves a request for avatar evaluate",
                 "consumes": [
@@ -24,7 +48,7 @@
                 "tags": [
                     "report"
                 ],
-                "summary": "Endpoint to saves avatar reports",
+                "summary": "Endpoint to save avatar reports",
                 "parameters": [
                     {
                         "description": "Create a report",
@@ -48,24 +72,62 @@
                     }
                 }
             }
+        },
+        "/report/{id}": {
+            "get": {
+                "description": "Get details of report corresponding to the input id",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "report"
+                ],
+                "summary": "Get details for a given report id",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "Report ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/models.Report"
+                        }
+                    }
+                }
+            }
         }
     },
     "definitions": {
         "models.Report": {
             "type": "object",
             "required": [
-                "name"
+                "report_id",
+                "url"
             ],
             "properties": {
-                "description": {
+                "created_at": {
                     "type": "string"
                 },
-                "name": {
-                    "description": "gorm.Model",
+                "id": {
+                    "type": "string"
+                },
+                "report_id": {
                     "type": "string"
                 },
                 "status": {
                     "type": "integer"
+                },
+                "url": {
+                    "type": "string"
                 }
             }
         }
